# Autosubtitle-for-standalone-and-davinci

./: .gitignore  README.md  TIKTOK_TEMPLATE_PROMPT.md
.jules/: bolt.md
AutoSubs-App/: package.json  tsc_out.txt  tsc_output.txt
AutoSubs-App/src-tauri/: Cargo.toml  tauri.conf.json
AutoSubs-App/src-tauri/.cargo/: config.toml
AutoSubs-App/src-tauri/capabilities/: default.json
AutoSubs-App/src-tauri/crates/esaxx-rs/: build.rs
AutoSubs-App/src-tauri/crates/esaxx-rs/src/: sais.rs
AutoSubs-App/src-tauri/crates/transcription-engine/: Cargo.toml
AutoSubs-App/src-tauri/crates/transcription-engine/src/: lib.rs  model_manager.rs  translate.rs
AutoSubs-App/src-tauri/debug_bindgen/: Cargo.toml
AutoSubs-App/src-tauri/resources/modules/: autosubs_core.lua
AutoSubs-App/src-tauri/src/: main.rs  tests.rs  transcription_api.rs
AutoSubs-App/src/components/common/: import-export-popover.tsx
AutoSubs-App/src/components/dialogs/: add-to-timeline-dialog.tsx
AutoSubs-App/src/components/layout/: titlebar.tsx
AutoSubs-App/src/components/settings/: model-picker.tsx
AutoSubs-App/src/components/subtitles/: speaker-settings.tsx  subtitle-list.tsx
AutoSubs-App/src/components/transcription/: transcription-panel.tsx
AutoSubs-App/src/contexts/: ProgressContext.tsx  SettingsContext.tsx  TranscriptContext.tsx
AutoSubs-App/src/i18n/locales/en/: translation.json
AutoSubs-App/src/utils/: file-utils.test.ts  file-utils.ts  srt-utils.test.ts  srt-utils.ts  subtitle-formatter.ts
